--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <body style="background-color:black">
     <div id="root"></div>
-    <div id="mobile"></div>
+    <div id="mobile" style="color: aliceblue;"></div>
     <div class="main" id="container"></div>
 
     <script type="text/javascript">
