--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       var element = document.getElementById('mobile');
       if (isMobile) {
           document.getElementById("container").style["display"] = "none";
-          element.innerHTML = "You are using Mobile ==> Switch to the Desktop site";
+          element.innerHTML = "You are using Mobile ,Switch to the Desktop site";
       }
     </script>
 
